--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ captures
 !*.xcodeproj/project.xcworkspace/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+/mdk-kotlin/src/androidMain/cpp/mdk-sdk/
+/mdk-kotlin/src/androidMain/cpp/mdk-sdk-android.7z
