--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,4 +47,4 @@ jobs:
 
       - name: Publish To Maven Central
         run: |
-          ./gradlew publishAndReleaseToMavenCentral --info --no-configuration-cache
+          ./gradlew publishAndReleaseToMavenCentral --scan --no-configuration-cache
