--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\=
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 kotlin.mpp.enableCInteropCommonization=true
-versionName="0.0.2"
+versionName=0.0.2
